--- a/index.html
+++ b/index.html
@@ -30,5 +30,5 @@
 <body>
     <button type="submit" id="submit_btn">Submit</button>
 </body>
-<script src="../JavaScript/popup-script.js"></script>
+<script src="./popup-script.js"></script>
 </html>
